# scanit

./: Cargo.toml  README.md  build.rs  lib.rs
src/: config.rs  constants.rs  convenience_functions.rs  error.rs  ggh.ipynb  lib.rs  main.rs  printer.rs  process_entries.rs  test_notebook.ipynb
