[package]
name = "scanit"
version = "0.3.7"
rust-version = "1.74.1"
edition = "2021"
description = "A fast, multi-threaded filesystem search tool"
license = "MIT"
documentation = "https://docs.rs/scanit"
repository = "https://github.com/alexcu2718/scanit"
keywords = ["search", "filesystem", "parallel", "regex", "cli"]
categories = ["filesystem", "command-line-utilities", "concurrency"]

[dependencies]
clap_complete = "4.5.44"
clap = { version = "4.4", features = ["derive"] }
ignore = "0.4.23"
regex = { version = "1.11.1", features = ["perf-dfa-full"] }
thiserror = "2.0.11"
mimalloc = "0.1.43"
fnmatch-regex2 = "0.3.0"
nu-ansi-term = "0.50.1"



[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
debug = true
strip= "symbols"

